--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'common.css' %}">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
-    <!-- Bootstrap JS -->
+    <!-- Bootstrap JS 부트스트랩 버튼 구현을 위해 bundle를 추가하였음. -->
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
