--- a/templates/racket/racketDetail.html
+++ b/templates/racket/racketDetail.html
@@ -76,10 +76,10 @@
 
                     {%csrf_token%}
 
-                    <div><input id="inputNumForm" name="visitorScore" class="scoreReview" value="0" type="hidden"></div>
+                    <div class="d-flex"><input id="inputNumForm" name="visitorScore" class="scoreReview" value="0" type="hidden"></div>
                     <label for="id_content"></label><br>
 
-                    <input type="text" name="visitorReview" class="textReview" placeholder="한줄평을 작성해주세요"
+                    <input type="text" name="visitorReview" class="t-flex-grow textReview" placeholder="한줄평을 작성해주세요"
                            size="%" required id="id_content"><br><br>
 
 
@@ -221,8 +221,8 @@ const onSubmitModify = (id) => {
     });
 }
 
-$("#spanUserName").text() //태그의 아이디로서 태그값을 가져온다.
-$(".spanVisitorAccount") //태그의 클래스로서 태그값을 가져온다
+$("#spanUserName").text() //# = 태그의 아이디로서 태그값을 가져온다.
+$(".spanVisitorAccount") //. = 태그의 클래스로서 태그값을 가져온다
 $(".spanVisitorAccount")[0].innerHTML
 
 for(i = 0; i < $(".spanVisitorAccount").length; i++){
